--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && husky install",
+    "commit": "cz",
+    "check-types": "tsc --noEmit --pretty"
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.28.1",
@@ -48,6 +50,8 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.39",
@@ -55,8 +59,12 @@
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "autoprefixer": "^10.4.16",
+    "cz-conventional-changelog": "^3.3.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.3",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^40.0.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.3.1",
@@ -69,5 +77,10 @@
     "prisma": "^5.6.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
