--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "next": "14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-textarea-autosize": "^8.5.3",
