--- a/package.json
+++ b/package.json
@@ -35,9 +35,14 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-table": "^8.10.7",
+    "@tiptap/core": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -84,7 +89,7 @@
     "lint-staged": "^15.1.0",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
-    "prisma": "^5.6.0",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
   },
