--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-table": "^8.10.7",
     "@tiptap/core": "^2.2.4",
+    "@tiptap/extension-placeholder": "^2.2.4",
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
