--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-hook-form": "^7.48.2",
     "react-textarea-autosize": "^8.5.3",
     "resend": "^3.2.0",
+    "svix": "^1.21.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
