chore: add bcrypt and jsonwebtoken dependencies

--- a/package.json
+++ b/package.json
@@ -46,11 +46,13 @@
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "axios": "^1.6.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "8.0.0-rc19",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
@@ -72,6 +74,8 @@
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@tanstack/eslint-plugin-query": "^5.8.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
