--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -41,6 +42,9 @@
     "@tanstack/react-query": "^5.8.7",
     "@tanstack/react-table": "^8.10.7",
     "@tiptap/core": "^2.2.4",
+    "@tiptap/extension-bubble-menu": "^2.3.0",
+    "@tiptap/extension-code-block-lowlight": "^2.3.0",
+    "@tiptap/extension-floating-menu": "^2.3.0",
     "@tiptap/extension-placeholder": "^2.2.4",
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
@@ -52,10 +56,13 @@
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "8.0.0-rc19",
+    "highlight.js": "^11.9.0",
     "jsonwebtoken": "^9.0.2",
+    "lowlight": "^3.1.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
+    "novel": "^0.3.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
@@ -65,6 +72,8 @@
     "svix": "^1.21.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "tiptap-extension-auto-joiner": "^0.1.1",
+    "tiptap-extension-global-drag-handle": "^0.1.6",
     "uuid": "^9.0.1",
     "vaul": "^0.8.0",
     "zod": "^3.22.4",
@@ -73,6 +82,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
+    "@tailwindcss/typography": "^0.5.12",
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
@@ -96,6 +106,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
     "postcss": "^8.4.31",
+    "postcss-nesting": "^12.1.1",
     "prettier": "^3.1.0",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.5",
