--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "postcss-nesting": "^12.1.1",
     "prettier": "^3.1.0",
     "prisma": "^5.10.2",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.3.2"
   },
