--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@clerk/clerk-react": "^4.28.1",
     "@clerk/nextjs": "^4.29.3",
     "@clerk/themes": "^1.7.9",
+    "@clerk/types": "^3.63.1",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
