feat: image module classroom

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "@uploadthing/react": "^6.4.4",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -69,6 +70,7 @@
     "svix": "^1.21.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.9.0",
     "uuid": "^9.0.1",
     "vaul": "^0.8.0",
     "zod": "^3.22.4",
