--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.48.2",
     "react-textarea-autosize": "^8.5.3",
     "resend": "^3.2.0",
