chore: add packages

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@clerk/nextjs": "^4.29.3",
     "@clerk/themes": "^1.7.9",
     "@hookform/resolvers": "^3.3.2",
+    "@mantine/core": "^7.8.0",
+    "@mantine/hooks": "^7.8.0",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -54,6 +56,7 @@
     "date-fns": "^2.30.0",
     "embla-carousel-react": "8.0.0-rc19",
     "jsonwebtoken": "^9.0.2",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
@@ -77,6 +80,7 @@
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
