--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tiptap/extension-code-block-lowlight": "^2.3.0",
     "@tiptap/extension-floating-menu": "^2.3.0",
     "@tiptap/extension-placeholder": "^2.2.4",
+    "@tiptap/extension-youtube": "^2.3.0",
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
@@ -78,9 +79,9 @@
     "svix": "^1.21.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.9.0",
     "tiptap-extension-auto-joiner": "^0.1.1",
     "tiptap-extension-global-drag-handle": "^0.1.6",
+    "uploadthing": "^6.9.0",
     "uuid": "^9.0.1",
     "vaul": "^0.8.0",
     "zod": "^3.22.4",
