--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
     "@uploadthing/react": "^6.5.1",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
