--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "autoprefixer": "^10.4.16",
     "cypress": "^13.6.4",
+    "cypress-file-upload": "^5.0.8",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.54.0",
     "eslint-config-next": "14.0.3",
