style: change the migrate script name and its value to something more semantic

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "commit": "cz",
     "check-types": "tsc --noEmit --pretty",
     "cypress:open": "cypress open",
-    "migrate": "prisma migrate"
+    "prisma-migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@blocknote/core": "^0.10.1",
