fix: fixing cron_secret environment

--- a/.env.example
+++ b/.env.example
@@ -32,4 +32,4 @@ NEXT_PUBLIC_VIMEO_ACCESS_TOKEN=<YOUR_VIMEO_ACCESS_TOKEN>
 NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=<YOUR_GOOGLE_MAPS_API_KEY>
 
 # Cron Jobs
-CRON_JOB_SECRET=<YOUR_CRON_JOB_SECRET>
+CRON_SECRET=<YOUR_CRON_JOB_SECRET>
