--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@clerk/nextjs": "^5.3.6",
     "@clerk/themes": "^1.7.9",
     "@clerk/types": "^3.63.1",
+    "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.2",
     "@mantine/core": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
