chore: update `.env.example` for local postgres configuration

--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,15 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=<YOUR_CLERK_PUBLISHABLE_KEY>
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-in
 
+# Local Postgres
+POSTGRES_USER=local_user
+POSTGRES_PASSWORD=local_password
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=local_db
+
 # Database
-DATABASE_URL=<YOUR_DATABASE_URL>
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}"
 DEVELOPER_EMAIL=<YOUR_DEVELOPER_EMAIL>
 
 # UploadThing
