--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "8.0.0-rc19",
     "framer-motion": "^11.2.10",
     "highlight.js": "^11.9.0",
