--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,9 @@ jobs:
         env:
           UPLOADTHING_SECRET: ${{ secrets.UPLOADTHING_SECRET }}
           RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
+          NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+          BASE_URL_PRODUCTION: ${{ secrets.BASE_URL_PRODUCTION }}
+          BASE_URL_DEVELOPMENT: ${{ secrets.BASE_URL_DEVELOPMENT }}
 
       - name: Start Next.js server
         run: pnpm run start &
