--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,7 @@ jobs:
     env:
       UPLOADTHING_SECRET: ${{ secrets.UPLOADTHING_SECRET }}
       RESEND_API_KEY: ${{ secrets.RESEND_API_KEY }}
-      CLERK_SECRET_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+      NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
       BASE_URL_PRODUCTION: ${{ secrets.BASE_URL_PRODUCTION }}
       BASE_URL_DEVELOPMENT: ${{ secrets.BASE_URL_DEVELOPMENT }}
 
