feat: wait for server be ready

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=<YOUR_CLERK_PUBLISHABLE_KEY>
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-in
+CLERK_TESTING_TOKEN='token
 
 # Database
 DATABASE_URL=<YOUR_DATABASE_URL>
