--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,7 +40,7 @@ jobs:
         run: pnpm run start &
 
       - name: Wait for server to start
-        run: npx wait-on http://localhost:3000
+        run: pnpx wait-on http://localhost:3000
 
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
