--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@clerk/nextjs": "^5.3.6",
     "@clerk/themes": "^1.7.9",
     "@clerk/types": "^3.63.1",
+    "@dagrejs/dagre": "^1.1.4",
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.3.2",
     "@mantine/core": "^7.8.0",
@@ -40,6 +41,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.1.5",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-radio-group": "^1.1.3",
@@ -66,10 +68,11 @@
     "@uploadthing/react": "^6.5.1",
     "@vercel/analytics": "^1.3.1",
     "@vis.gl/react-google-maps": "^1.4.0",
+    "@xyflow/react": "^12.4.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "8.0.0-rc19",
