--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "commit": "cz",
     "check-types": "tsc --noEmit --pretty",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run --headless",
+    "cypress:run": "cypress run --browser chrome --headless",
     "prisma-migrate": "prisma migrate dev"
   },
   "dependencies": {
