chore: update `.env.example` with default `seed` envs

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,14 @@ NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=<YOUR_GOOGLE_MAPS_API_KEY>
 
 # Cron Jobs
 CRON_SECRET=<YOUR_CRON_JOB_SECRET>
+
+# Seed
+DEFAULT_SEM_PATRIA_EMAIL=local_user@email.com
+DEFAULT_SEM_PATRIA_PASSWORD=sem_patria_password
+DEFAULT_SEM_PATRIA_NAME=Default User
+DEFAULT_SEM_PATRIA_USERNAME=default_username
+
+ADMIN_SEM_PATRIA_EMAIL=local_admin@email.com
+ADMIN_SEM_PATRIA_PASSWORD=sem_patria_password
+ADMIN_SEM_PATRIA_NAME=Admin User
+ADMIN_SEM_PATRIA_USERNAME=admin_username
