--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,6 +49,14 @@ jobs:
       - name: Run Cypress tests
         uses: cypress-io/github-action@v6
         with:
+          build: pnpm run build
+          start: pnpm run start
           browser: chrome
+
+      - name: Print Next.js Logs (if tests fail)
+        if: failure()
+        run:
+          cat nextjs-logs.txt
+
           # headless: true
           # wait-on: http://localhost:3000
