--- a/src/infra/docker-compose.yaml
+++ b/src/infra/docker-compose.yaml
@@ -1,12 +1,32 @@
+version: '3.8'
+
 services:
   sem-patria-local-db:
     image: 'postgres:latest'
     container_name: 'sem-patria-local-db'
+    restart: always
     environment:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_PORT=${POSTGRES_PORT}
       - POSTGRES_DB=${POSTGRES_DB}
     ports:
       - '${POSTGRES_PORT}:5432'
+    networks:
+      - my_network
+
+  app:
+    build: .
+    container_name: 'sem-patria-app'
+    depends_on:
+      - sem-patria-local-db
+    environment:
+      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@sem-patria-local-db:5432/${POSTGRES_DB}
+    networks:
+      - my_network
+    ports:
+      - '3000:3000'
+    command: ['pnpm', 'start']
+
+networks:
+  my_network:
+    driver: bridge
