--- a/src/infra/docker-compose.yaml
+++ b/src/infra/docker-compose.yaml
@@ -15,7 +15,8 @@ services:
       - my_network
 
   app:
-    build: .
+    build:
+      context: src/infra
     container_name: 'sem-patria-app'
     depends_on:
       - sem-patria-local-db
