--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,14 +38,16 @@ jobs:
       - name: 📦 Install Dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: 🔍 Debug Check if `docker-compose.yml` Exists
-        run: ls -al src/infra
+      - name: 🔍 Debug Show All Files in GitHub Actions
+        run: find $GITHUB_WORKSPACE
 
-      - name: 🐳 Start Docker Services
+      - name: 🔍 Debug Check if `docker-compose.yaml` Exists
+        run: ls -al $GITHUB_WORKSPACE/src/infra || echo "🚨 src/infra/ directory not found!"
+
+      - name: 🐳 Start Docker Services (Without Build)
         run: |
           docker network create my_network || true
           docker compose -f $GITHUB_WORKSPACE/src/infra/docker-compose.yaml up -d
-
       - name: 🔍 Check Running Containers
         run: docker ps -a
 
