--- a/src/infra/docker-compose.yaml
+++ b/src/infra/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
     depends_on:
       - sem-patria-local-db
     environment:
-      - DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@sem-patria-local-db:5432/${POSTGRES_DB}
+      - DATABASE_URL=${DATABASE_URL}
     networks:
       - my_network
     ports:
