--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -44,7 +44,7 @@ jobs:
            echo "POSTGRES_HOST=$POSTGRES_HOST" >> .env
            echo "POSTGRES_PORT=$POSTGRES_PORT" >> .env
            echo "POSTGRES_DB=$POSTGRES_DB" >> .env
-           echo "DATABASE_URL=$DATABASE_URL" >> .env
+           echo "DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@sem-patria-local-db:5432/${POSTGRES_DB}" >> .env
         shell: bash
 
       - name: 📦 Install pnpm
@@ -74,6 +74,15 @@ jobs:
             sleep 2
           done
           echo "✅ PostgreSQL is ready."
+
+      - name: ⏳ Ensure Prisma Can Connect to PostgreSQL
+        run: |
+          echo "Checking if Prisma can connect..."
+          until pnpm exec prisma db execute --file=/dev/null --url=$DATABASE_URL; do
+            echo "Waiting for database..."
+            sleep 5
+          done
+          echo "✅ Prisma is ready."
 
       - name: 🌱 Seed Database
         run: pnpm seed
