--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
       POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
       POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
       POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      DATABASE_URL: postgres://postgres:${POSTGRES_PASSWORD}@sem-patria-local-db:5432/${POSTGRES_DB}
       CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
 
     steps:
@@ -81,6 +81,9 @@ jobs:
           echo "❌ PostgreSQL did not start in time."
           docker logs sem-patria-local-db
           exit 1
+
+      - name: 🔍 Test Database Connection
+        run: docker exec sem-patria-local-db pg_isready -U postgres -h sem-patria-local-db
 
       - name: ⏳ Ensure Prisma Can Connect to PostgreSQL
         run: |
