--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,6 @@ jobs:
       CLERK_TESTING_TOKEN: ${{ secrets.CLERK_TESTING_TOKEN }}
       POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-      POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
       POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
       POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
       DATABASE_URL: postgres://postgres:${POSTGRES_PASSWORD}@sem-patria-local-db:5432/${POSTGRES_DB}
@@ -34,17 +33,16 @@ jobs:
       - name: 📄 Create `.env` File
         run: |
           echo "UPLOADTHING_SECRET=$UPLOADTHING_SECRET" >> .env
-           echo "RESEND_API_KEY=$RESEND_API_KEY" >> .env
-           echo "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY" >> .env
-           echo "BASE_URL_PRODUCTION=$BASE_URL_PRODUCTION" >> .env
-           echo "BASE_URL_DEVELOPMENT=$BASE_URL_DEVELOPMENT" >> .env
-           echo "CLERK_TESTING_TOKEN=$CLERK_TESTING_TOKEN" >> .env
-           echo "POSTGRES_USER=$POSTGRES_USER" >> .env
-           echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env
-           echo "POSTGRES_HOST=$POSTGRES_HOST" >> .env
-           echo "POSTGRES_PORT=$POSTGRES_PORT" >> .env
-           echo "POSTGRES_DB=$POSTGRES_DB" >> .env
-           echo "DATABASE_URL=postgres://postgres:${POSTGRES_PASSWORD}@sem-patria-local-db:5432/${POSTGRES_DB}" >> .env
+          echo "RESEND_API_KEY=$RESEND_API_KEY" >> .env
+          echo "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY" >> .env
+          echo "BASE_URL_PRODUCTION=$BASE_URL_PRODUCTION" >> .env
+          echo "BASE_URL_DEVELOPMENT=$BASE_URL_DEVELOPMENT" >> .env
+          echo "CLERK_TESTING_TOKEN=$CLERK_TESTING_TOKEN" >> .env
+          echo "POSTGRES_USER=$POSTGRES_USER" >> .env
+          echo "POSTGRES_PASSWORD=$POSTGRES_PASSWORD" >> .env
+          echo "POSTGRES_PORT=$POSTGRES_PORT" >> .env
+          echo "POSTGRES_DB=$POSTGRES_DB" >> .env
+          echo "DATABASE_URL=postgres://postgres:$POSTGRES_PASSWORD@sem-patria-local-db:5432/$POSTGRES_DB" >> .env
         shell: bash
 
       - name: 📦 Install pnpm
@@ -53,13 +51,8 @@ jobs:
       - name: 📦 Install Dependencies
         run: pnpm install --no-frozen-lockfile
 
-      - name: 🔍 Debug Check if `docker-compose.yaml` Exists
-        run: ls -al $GITHUB_WORKSPACE/src/infra || echo "🚨 src/infra/ directory not found!"
-
-      - name: 🐳 Start Docker Services (Without Build)
-        run: |
-          docker network create my_network || true
-          docker compose --env-file .env -f $GITHUB_WORKSPACE/src/infra/docker-compose.yaml up -d
+      - name: 🐳 Start Docker Services
+        run: docker compose --env-file .env -f $GITHUB_WORKSPACE/src/infra/docker-compose.yaml up -d
 
       - name: 🔍 Check Running Containers
         run: docker ps -a
@@ -69,7 +62,6 @@ jobs:
 
       - name: ⏳ Wait for PostgreSQL to be Ready
         run: |
-          echo "Waiting for PostgreSQL to fully initialize..."
           for i in {1..20}; do
             if docker exec sem-patria-local-db pg_isready -U postgres; then
               echo "✅ PostgreSQL is ready."
@@ -82,14 +74,10 @@ jobs:
           docker logs sem-patria-local-db
           exit 1
 
-      - name: 🔍 Test Database Connection
-        run: docker exec sem-patria-local-db pg_isready -U postgres -h sem-patria-local-db
-
-      - name: ⏳ Ensure Prisma Can Connect to PostgreSQL
+      - name: 🔍 Ensure Prisma Can Connect
         run: |
-          echo "Checking if Prisma can connect..."
-          until pnpm exec prisma db execute --file=/dev/null --url=$DATABASE_URL; do
-            echo "Waiting for database..."
+          until pnpm exec prisma migrate status --schema=prisma/schema.prisma; do
+            echo "⏳ Waiting for Prisma..."
             sleep 5
           done
           echo "✅ Prisma is ready."
@@ -102,10 +90,13 @@ jobs:
 
       - name: 🚀 Start Next.js Server in Docker
         run: |
-          pnpm start > nextjs.log 2>&1 &
+          nohup pnpm start > nextjs.log 2>&1 &
 
       - name: ⏳ Wait for Next.js to be Ready
         run: pnpx wait-on http://localhost:3000 --timeout 60000
+
+      - name: ⌛ Extra Wait Time for Stability
+        run: sleep 10
 
       - name: 📜 Print Next.js Logs
         run: cat nextjs.log
