--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,6 +60,9 @@ jobs:
       - name: 📜 Inspect PostgreSQL Logs
         run: docker logs sem-patria-local-db || true
 
+      - name: 🔍 Test Database Connection
+        run: docker exec sem-patria-local-db psql -U $POSTGRES_USER -d $POSTGRES_DB -h sem-patria-local-db -c "SELECT 1;"
+
       - name: ⏳ Wait for PostgreSQL to be Ready
         run: |
           for i in {1..20}; do
