feat: improve yaml

--- a/src/infra/docker-compose.yaml
+++ b/src/infra/docker-compose.yaml
@@ -13,6 +13,12 @@ services:
       - '${POSTGRES_PORT}:5432'
     networks:
       - my_network
+    command: ['postgres', '-c', 'listen_addresses=*']
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER}']
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   app:
     image: node:18-alpine
